--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,16 @@
 *{
-    margin:0;
-    padding:0;
+    margin:0px;
+    padding:0px;
     box-sizing: border-box;
 }
 
 
 html,body{
     width:100%;
+    height:100%;
+}
+
+#map{
+    width: 100%;
     height:100%;
 }
